...
                                android:id="@+id/contCardNum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toTopOf="parent">

                                <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
                                    android:id="@+id/cardNumberFieldLay"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:boxBackgroundModes="outline"
                                    app:hint="@string/card_number"
                                    app:hintEnabled="true">

                                    <com.verygoodsecurity.vgscollect.widget.VGSCardNumberEditText
                                        android:id="@+id/cardNumberField"
                                        style="@style/EditText"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:nextFocusDown="@+id/cardHolderField"
                                        app:cardBrandIconGravity="end"
                                        app:fieldName="cardNumber"
                                        app:fontFamily="@font/robotomono_light"
                                        app:imeOptions="actionNext"
                                        app:numberDivider="-"
                                        app:validationRule="acceptUnknown" />
...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/payment_card_vertical_margin"
                                app:layout_constraintTop_toBottomOf="@+id/contCardNum">

                                <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
                                    android:id="@+id/cardHolderFieldLay"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:boxBackgroundModes="outline"
                                    app:hint="@string/card_holder"
                                    app:hintEnabled="true">

                                    <com.verygoodsecurity.vgscollect.widget.PersonNameEditText
                                        android:id="@+id/cardHolderField"
                                        style="@style/EditText"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:nextFocusDown="@+id/cardExpDateField"
                                        app:fieldName="card_data.personal_data.cardHolder"
                                        app:fontFamily="@font/robotomono_light"
                                        app:imeOptions="actionNext"
                                        />
                                </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>
                            </FrameLayout>
...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintTop_toBottomOf="@+id/contHoldNum">

                                <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
                                    android:id="@+id/cardExpDateFieldLay"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:boxBackgroundModes="outline"
                                    app:hint="@string/exp_date"
                                    app:hintEnabled="true">

                                    <com.verygoodsecurity.vgscollect.widget.ExpirationDateEditText
                                        android:id="@+id/cardExpDateField"
                                        style="@style/EditText"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:nextFocusDown="@+id/cardCVCField"
                                        app:datePattern="MM/yy"
                                        app:datePickerModes="input"
                                        app:fieldName="card_data.personal_data.secret.expDate"
                                        app:fontFamily="@font/robotomono_light"
                                        app:imeOptions="actionNext"
                                        app:inputType="date"
                                        app:enableValidation="false"
                                        app:outputPattern="yyyy-MM-dd'T'HH:mm:ss.SSSSSSS"
                                        />
                                </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>

                                <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
                                    android:id="@+id/cardCVCFieldLay"
                                    android:layout_width="130dp"
                                    android:layout_height="wrap_content"
                                    app:boxBackgroundModes="outline"
                                    app:errorTextAppearance="@style/error_appearance"
                                    app:hint="@string/cvc"
                                    app:hintEnabled="true">
...
                                android:layout_height="match_parent"
                                android:textColor="@android:color/white"
                                android:textSize="14dp" />
                        </FrameLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/submitBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_padding_material_medium"
                            android:text="@string/collect_activity_submit_btn"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
...
                            android:layout_weight="1"
                            android:paddingEnd="@dimen/margin_padding_material_small"
                            android:textColor="#5D6A7A"
                            android:textSize="10dp" />

                        <TextView
                            android:id="@+id/responseContainerView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#5D6A7A"
                            android:textSize="10dp" />
                    </LinearLayout>
...
