<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/details_item"
        android:icon="@drawable/ic_cards"
        android:iconTint="@android:color/white"
        android:title="@string/scan_item"
        app:showAsAction="ifRoom"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/scan_card"
        android:icon="@drawable/ic_scan_card"
        android:iconTint="@android:color/white"
        android:title="@string/scan_item"
        app:showAsAction="ifRoom"
        tools:ignore="UnusedAttribute" />
</menu>