...

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCardHolder"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
...

            <com.verygoodsecurity.vgscollect.widget.PersonNameEditText
                android:id="@+id/vgsTiedCardHolder"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
...

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCardNumber"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
...

            <com.verygoodsecurity.vgscollect.widget.VGSCardNumberEditText
                android:id="@+id/vgsTiedCardNumber"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
...

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilExpiry"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
...

            <com.verygoodsecurity.vgscollect.widget.ExpirationDateEditText
                android:id="@+id/vgsTiedExpiry"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
...

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCvc"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
...

            <com.verygoodsecurity.vgscollect.widget.CardVerificationCodeEditText
                android:id="@+id/vgsTiedCvc"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
...

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCity"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
...

            <com.verygoodsecurity.vgscollect.widget.VGSEditText
                android:id="@+id/vgsTiedCity"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
...

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilPostalCode"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
...

            <com.verygoodsecurity.vgscollect.widget.VGSEditText
                android:id="@+id/vgsTiedPostalCode"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
...

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilSsn"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
...

            <com.verygoodsecurity.vgscollect.widget.SSNEditText
                android:id="@+id/vgsTiedSsn"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
...

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbFilesManage"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
...
            app:icon="@drawable/baseline_insert_drive_file_24"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="@+id/mbSubmit"
            app:layout_constraintEnd_toStartOf="@+id/mbSubmit"
            app:layout_constraintTop_toTopOf="@+id/mbSubmit" />
...
