...
                tools:background="@android:color/holo_red_dark"
                tools:text="JSON"
                tools:textColor="@android:color/white"
                tools:visibility="visible" />

            <io.github.kbiakov.codeview.CodeView
                android:id="@+id/codeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
